--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
   "name": "api-know",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "API Know provides an easy interface to perform CRUD operations against APIs, localstorage, etc.. ",
-  "main": "index.js",
   "readme": "https://github.com/mishkinf/api-know/blob/master/README.md",
+  "main": "dist/index.js",
+  "files": [
+    "bin",
+    "build",
+    "src",
+    "test",
+    ".babelrc",
+    "webpack.config.js"
+  ],
+
   "scripts": {
-    "clean": "rm -rf lib/ dist/",
-    "clean-build": "npm run clean && npm run build",
-    "build": "webpack --config webpack.config.js --progress --profile --colors",
-    "build-dist": "npm run build && webpack && uglifyjs --in-source-map dist/api-know.js.map -s dist/api-know.js -o dist/api-know.min.js"
+    "build": "rimraf build && webpack",
+    "prestart": "npm run build",
+    "start": "node bin/main.js",
+    "pretest": "npm run build",
+    "test": "mocha build/test.js",
+    "prepublish": "npm run build"
+  },
+  "bin": {
+    "api-know": "./bin/main.js"
   },
   "repository": {
     "type": "git",
@@ -26,11 +40,13 @@
     "url": "https://github.com/mishkinf/api-know/issues"
   },
   "homepage": "https://github.com/mishkinf/api-know#readme",
-  "dependencies": {
-    "uglify-js": "^2.6.1",
-    "webpack": "^1.12.12"
-  },
   "devDependencies": {
-    "webpack-dev-server": "^1.14.1"
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "mocha": "^2.4.5",
+    "rimraf": "^2.5.1",
+    "webpack": "^1.12.12"
   }
 }
